# nftabs-staking

./: .eslintrc.json  .prettierrc  Anchor.toml  README.md  package.json
app/: .env.template  package.json
app/components/Header/: Header.tsx
app/components/Layout/: Layout.tsx
app/components/NFTGallery/: CollectionItem.tsx  NFTGallery.tsx
app/components/NFTSelectInput/: NFTSelectInput.tsx
app/components/WalletManager/: WalletManager.tsx
app/components/WalletProvider/: WalletProvider.tsx
app/components/icons/: index.tsx
app/hooks/: useStaking.ts  useStakingFungible.ts  useTotalStaked.ts  useWalletNFTs.tsx
app/lib/: index.ts  pda.ts  types.ts  utils.ts
app/pages/: _app.tsx  index.tsx  nfts.tsx  sunshine.tsx
app/public/fonts/: fonts.css
app/styles/: react-tabs.ts  theme.ts
programs/magicshards_staking/: Cargo.toml
programs/magicshards_staking/src/: error.rs  lib.rs  utils.rs
programs/magicshards_staking/src/instructions/: add_manager.rs  add_to_whitelist.rs  buff_pair.rs  claim_rewards.rs  create_locks.rs  debuff_pair.rs  fund_reward.rs  initialize_farmer.rs  mod.rs  remove_from_whitelist.rs  stake.rs  unstake.rs
programs/nftabs-staking/: Cargo.toml
programs/nftabs-staking/src/: error.rs  lib.rs
programs/nftabs-staking/src/instructions/: add_to_whitelist.rs  claim_rewards.rs  create_farm.rs  mod.rs  stake.rs  unstake.rs
programs/nftabs-staking/src/state/: collection_data.rs  farm.rs  farmer.rs  mod.rs  stake_receipt.rs
tests/: magicshards-staking.ts  mainnet.ts  nftabs-staking.ts  particles-mainnet.ts
(+8 files in other folders)
