[package]
name = "nftabs-staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nftabs_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version  = "0.24.2", features = ["init-if-needed"]}
anchor-spl = "0.24.2"
solutils = { git = "https://github.com/lucasig11/solutils", branch = "main", version = "0.1.0" }
